--- a/src/Web/WebResource.resx
+++ b/src/Web/WebResource.resx
@@ -123,6 +123,9 @@
   <data name="ContentTooLong" xml:space="preserve">
     <value>Komentarz nie może mieć więcej niż {0} znaków.</value>
   </data>
+  <data name="UserEmailNotCorrect" xml:space="preserve">
+    <value>Nieprawidłowy format adresu e-mail.</value>
+  </data>
   <data name="UserNameNotEmpty" xml:space="preserve">
     <value>Nazwa użytkownika nie może być pusta.</value>
   </data>
